--- a/term/_tmux.conf
+++ b/term/_tmux.conf
@@ -8,6 +8,7 @@ bind r source-file ~/.tmux.conf
 
 set -g default-terminal "xterm-256color"
 set -g history-limit 1000
+set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
