keep the current directory when create new window or pane.

--- a/term/_tmux.conf
+++ b/term/_tmux.conf
@@ -1,7 +1,12 @@
-# Make it use C-b, then use C-a in remote screen..
+# Make it use C-b
 unbind l
 set -g prefix C-b
 bind-key C-b last-window
+
+# Keep the current directory
+bind-key c new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # Reload key
 bind r source-file ~/.tmux.conf
