--- a/term/_tmux.conf
+++ b/term/_tmux.conf
@@ -2,6 +2,7 @@
 unbind l
 set -g prefix C-b
 bind-key C-b last-window
+bind-key C-a send-prefix
 
 # Keep the current directory
 bind-key c new-window -c "#{pane_current_path}"
@@ -13,10 +14,16 @@ bind r source-file ~/.tmux.conf
 
 set -g default-terminal "xterm-256color"
 set -g history-limit 1000
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+
+# mouse for version < 2.1
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+set-option -g -q mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M 
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M 
+
 
 # THEME
 set -g status-bg white
