--- a/term/_tmux.conf
+++ b/term/_tmux.conf
@@ -33,3 +33,6 @@ set -g status-left-length 30
 set -g status-left '#[fg=magenta](#S) #(whoami)@#h#[default]'
 set -g status-right '#[fg=red]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=blue]%H:%M#[default]'
 
+# title bar
+set -g set-titles on
+set -g set-titles-string "#T"
